# secret-santa

./: README.md  pyproject.toml  requirements.txt  run.py
data/: employees.csv  previous_assignments.csv
output/: secret_santa_assignments.csv
src/: main.py
src/exceptions/: custom_exceptions.py
src/models/: employee.py
src/services/: csv_service.py  secret_santa_service.py
tests/: test_csv_service.py  test_employee.py  test_secret_santa_service.py
